--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/styles/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="Style/index.css">
         <title>about us</title>
     </head>
-    
+
     <body>
     
         <header>
