--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -20,7 +20,7 @@
                 </h1>
 
                 <h3 class="head-info">
-                    Frisk och hälsosam mat tillgänglig
+                    Frisk och hälsosam mat
                 </h3>
 
             </section> 
@@ -48,7 +48,7 @@
             </section>   
 
             <section>
-                <img src="" alt="">
+                
             </section>
 
             <section>
@@ -56,13 +56,12 @@
             </section>
             
             <section>
-                <h2 class="contact-title">kontakt</h2>
+                <h2 class="contact-title">Kontakt</h2>
 
                 <p class="contact-info"> 
                     Kontakt
                     Kryddgatan 24,
                     251 23 Helsingborg
-
                     info@restaurang-spicesfromindia.com
                     042 -18 70 03
                 </p>
