--- a/index.html
+++ b/index.html
@@ -37,9 +37,24 @@
                 <div class="content">
                     <h1>Indian & Swedish food at its best!</h1>
                     <a href="#"><button>Book A Table</button></a>
-                    <a href="# "><button>Order Online</button> </a>
+                    <a href="#"><button>Order Online</button></a>
                 </div>
             </div>
+        </section>
+    
+
+        <section>
+            <div class="titlecontainer">
+                <div class="titlediv">
+                   <h1>Restaurant Taste Buds</h1>
+                   <h4>First Indian restaurant in the heart of Malmo</h4>
+                   <h5>Now also with an element of Indian & Swedish cuisine.</h5>
+
+                </div>
+
+
+            </div>
+
         </section>
     </main>
     <footer> 
