--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TasteBuds</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap">
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/landing.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
 </head>
 
 <body>
     <header>
         <nav class="navbar">
-            <div class="navdiv">
+            <div class="navdiv animate__animated animate__zoomIn repeat 4">
                 <div class="logo border"><a href="#"> </a></div>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -29,36 +29,59 @@
         </nav>
     </header>
     <main>
+
+  <!--this is hero video section-->
         <section>
             <div class="container">
                 <video autoplay loop muted class="background-clip">
                     <source src="/video/Mehak-India-1.mp4">
                 </video>
-                <div class="content">
+              <div class="content">
                     <h1>Indian & Swedish food at its best!</h1>
                     <a href="#"><button>Book A Table</button></a>
                     <a href="#"><button>Order Online</button></a>
-                </div>
+              </div>
             </div>
         </section>
-    
 
+    <!--titlecontainer hero section-->
         <section>
             <div class="titlecontainer">
                 <div class="titlediv">
-                   <h1>Restaurant Taste Buds</h1>
-                   <h4>First Indian restaurant in the heart of Malmo</h4>
-                   <h5>Now also with an element of Indian & Swedish cuisine.</h5>
-
+                    <h1>Restaurant Taste Buds</h1>
+                    <h4>First Indian restaurant in the heart of Malmo</h4>
+                    <h5>Now also with an element of Indian & Swedish cuisine</h5>
+                    <a href="#"><button>See Our Menu</button></a>
+                    <h4>Opening hours during Christmas & New Year</h4>
+                    <p>The Taj Mahal is closed on December 24 & 25 and January 1</p>
                 </div>
-
-
             </div>
-
         </section>
-    </main>
-    <footer> 
 
-    </footer>
+    <!--this is image container-->
+        <section>
+            <div class="imagecontainer">
+                <div class="alignment">
+                    <h1>Today's Lunch</h1></div>
+                <div class="alignment">
+                    <h2>We serve today's lunch Monday - Friday between 11:00 - 15:00</h2></div> 
+                <div class="alignment">
+                    <a href="#"><button>READ MORE</button></a></div>
+                <div class="alignment">
+                     <h2>Order online</h2></div>
+                <div class="alignment">
+                       <h2>Order your food for takeout in our modern ordering system!</h2></div>
+                </div>
+        
+        </section>
+      </main>
+     <footer> 
+        <div class="footer">
+
+
+
+
+        </div>
+  </footer>
 </body>
 </html>
