--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="titlediv">
                     <h1>Restaurant Taste Buds</h1>
                     <h4>First Indian restaurant in the heart of Malmo</h4>
-                    <h5>Now also with an element of Indian & Swedish cuisine</h5>
+                    <p>Now also with an element of Indian & Swedish cuisine</p>
                     <a href="#"><button>See Our Menu</button></a>
                     <h4>Opening hours during Christmas & New Year</h4>
                     <p>The Taj Mahal is closed on December 24 & 25 and January 1</p>
@@ -70,7 +70,7 @@
                 <div class="alignment">
                      <h2>Order online</h2></div>
                 <div class="alignment">
-                       <h2>Order your food for takeout in our modern ordering system!</h2></div>
+                       <h3>Order your food for takeout in our modern ordering system!</h3></div>
                 </div>
         
         </section>
