--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="navdiv animate__animated animate__zoomIn repeat 4">
+            <div class="navdiv animate__animated animate__zoomIn repeat 4s">
                 <div class="logo border"><a href="#"> </a></div>
                 <ul>
                     <li><a href="#">Home</a></li>
