--- a/index.html
+++ b/index.html
@@ -76,12 +76,28 @@
         </section>
       </main>
      <footer> 
-        <div class="footer">
+    <!--karta-->
+
+        <div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+        function myMap() {
+        var mapProp= {
+        center:new google.maps.LatLng(51.508742,-0.120850),
+        zoom:5,
+        };
+        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        }
+        </script>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+
+    
 
 
 
 
-        </div>
+        
   </footer>
 </body>
 </html>
