--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/new.css">
+    <link rel="stylesheet" href="/styles/contact-us.css">
     <script src="https://kit.fontawesome.com/edb0868ad4.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
