--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -4,12 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../styles/normalize.css">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/about-us.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap">
+     <link rel="stylesheet" href="../index.html">
         <title>about us</title>
     </head>
     <body>
         <header>
+            <nav class="navbar">
+                <div class="navdiv-animate-animated-animate-zoomIn-repeat-4">
+                    <div class="logo-border"><a href="#"> </a></div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
             <section>
                 <h1 class="head-title">
                     About us
@@ -19,8 +33,6 @@
                     Fresh and healthy food
                 </h3>
             </section> 
-        </header>
-        <main>
             <section> 
                 <h2 class="main-title">Our story</h2>
 
@@ -57,5 +69,8 @@
                 
             </section>
         </main>
+        <footer>
+
+        </footer>
     </body>  
 </html>
