--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,11 +6,10 @@
         <link rel="stylesheet" href="../styles/normalize.css">
         <link rel="stylesheet" href="../styles/about-us.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap">
-     <link rel="stylesheet" href="../index.html">
         <title>about us</title>
     </head>
-    <body>
-        <header>
+    <body class="body">
+        <header class="header">
             <nav class="navbar">
                 <div class="navdiv-animate-animated-animate-zoomIn-repeat-4">
                     <div class="logo-border"><a href="#"> </a></div>
