--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             </div>
         </section>
 
-    <!--titlecontainer hero section-->
+    <!--titlecontainer section-->
         <section>
             <div class="titlecontainer">
                 <div class="titlediv">
                     <h1>Restaurant Taste Buds</h1>
                     <h4>First Indian restaurant in the heart of Malmo</h4>
                     <p>Now also with an element of Indian & Swedish cuisine</p>
-                    <a href="#"><button>See Our Menu</button></a>
+                        <a href="#"><button>See Our Menu</button></a>
                     <h4>Opening hours during Christmas & New Year</h4>
                     <p>The Taj Mahal is closed on December 24 & 25 and January 1</p>
                 </div>
@@ -72,13 +72,15 @@
                 <div class="alignment">
                      <h2>Order online</h2></div>
                 <div class="alignment">
-                       <h3>Order your food for takeout in our modern ordering system!</h3></div>
+                     <h3>Order your food for takeout in our modern ordering system!</h3></div>
+                <div class="alignment">
+                    <a href="#"><button>ORDER ONLINE</button></a></div>     
                 </div>
         </section>
       </main>
 
 
-        <footer>
+   <footer>
         <div class="footer-content">
             <div class="footer-text">
                 <h4 class="footer-contact">CONTACT</h4>
@@ -99,6 +101,6 @@
                 <p class="footer-p">@Taste Buds 2025</p>
             </div>
         </div>
-    </footer>
+  </footer>
 </body>
 </html>
