changes in the code
html structural changes and adding classes
css added styling

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../styles/normalize.css">
         <link rel="stylesheet" href="../styles/about-us.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap">
+        <script src="https://kit.fontawesome.com/88e0251fb1.js" crossorigin="anonymous"></script>
         <title>about us</title>
     </head>
     <body class="body">
@@ -14,13 +15,13 @@
             <nav class="navbar-container">
                 
                 <div class="nav-logo">
-                    <img src="/images/newlogo.png.jpeg" alt="logo">
+                    <img class="logo" src="/images/newlogo.png.jpeg" alt="logo">
                 </div>
                 <ul class="ul">
-                    <li class="home"><a href="#">Home</a></li>
-                    <li class="gallery"><a href="#">Gallery</a></li>
-                    <li class="about-us"><a href="#">About Us</a></li>
-                    <li class="contact-us"><a href="#">Contact Us</a></li>
+                    <li class="li"><a class="li-a" href="#">Home</a></li>
+                    <li class="li"><a class="li-a" href="#">Gallery</a></li>
+                    <li class="li"><a class="li-a" href="#">About Us</a></li>
+                    <li class="li"><a class="li-a" href="#">Contact Us</a></li>
                 </ul>
                 
             </nav>
@@ -28,7 +29,7 @@
 
         <main>
             <!--2 huvudgrupper i main-->
-            <div class="1">
+            <div class="content">
                 <section class="content-container">
                     <div class="top-content-container">
                         <h1 class="top-title-h1">
@@ -59,7 +60,7 @@
             </div>
 
                  <!--del 2 Kontakt-->
-            <section class="2">
+            <section class="contact">
                 <div class="contact-container">
                     <h2 class="contact-title-h2">Kontakt</h2>
 
@@ -79,9 +80,9 @@
         <footer class="footer-about-us">
             <section>
                 <div>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-solid fa-location-dot"></i><img class="location-map" src="/images/Skärmavbild 2025-09-05 kl. 10.24.55.png" alt="resturangens adress i google maps">
+                    <i class="fa-brands-fa-facebook"></i>
+                    <i class="fa-brands-fa-instagram"></i>
+                    <i class="fa-solid-fa-location-dot"></i><img class="location-map" src="/images/Skärmavbild 2025-09-05 kl. 10.24.55.png" alt="resturangens adress i google maps">
                 </div>
 
             </section>
