--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -10,9 +10,28 @@
 </head>
 <body>
     <nav></nav>
-    <header>
-        <img class="header-image" src="/images/rise-contact-us(1).jpg" alt="rise-header">
+    
+        <header>
+        <nav class="navbar">
+            <div class="navdiv animate__animated animate__zoomIn repeat 4s">
+                <div class="logo border"><a href="#"> </a></div>
+              <nav>
+                 <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">Gallery</a></li>
+                      <li><a href="#">About Us</a></li>
+                      <li><a href="#">Contact Us</a></li>
+                 </ul>
+              </nav>
+            </div>
+        </nav>
     </header>
+
+    <div class="header-image"></div>
+    
+    <!-- <header> -->
+        <!-- <img class="header-image" src="/images/rise-contact-us(1).jpg" alt="rise-header"> -->
+    <!-- </header> -->
     <div class="info-container">
         <h1>Contact Us</h1>
         <p> You can reach us both via phone and email. For reservations, please call +46 (0)42-19 38 00</p>
