adding content and styling

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-        <header>
+    <header>
         <nav class="navbar">
             <div class="navdiv animate__animated animate__zoomIn repeat 4s">
                 <div class="logo border"><a href="#"> </a></div>
@@ -25,18 +25,30 @@
         </nav>
     </header>
 
+    <h1 class="h1-gallery">Gallery</h1>
     <div class="background-top">
+        <!-- <h1 class="h1-gallery">Gallery</h1> -->
         <div class="background-gallery">
-            <img src="/images/IMG_outside.jpeg" alt="restaurant-patio">
-            <img src="/images/IMG_liquour.jpeg" alt="bar-bottles">
-            <img src="/images/Table-for-two.jpeg" alt="table-for-two">
-            <img src="/images/IMG_plate.jpeg" alt="plates-cutlery">
-            <img src="/images/Corner.jpeg" alt="corner-of-restaurant">
-            <img src="/images/IMG_from-above.jpeg" alt="restaurant-from-above">
-            <img src="/images/whole-restaurant.jpeg" alt="the-whole-restaurant">
-            <img src="/images/photo-of-logo.jpeg" alt="restaurant-logo-photo">
+            <div class="image-container1">
+                <div class="image1"><img src="/images/IMG_outside.jpeg" alt="restaurant-patio"></div></div>
+            <div class="image-container2">
+                <div class="image2"><img class="bottles" src="/images/IMG_liquour.jpeg" alt="bar-bottles"></div></div>    
+            <div class="image-container3">
+                <div class="image3"><img src="/images/Table-for-two.jpeg" alt="table-for-two"></div></div>
+            <div class="image-container4">
+                <div class="image4"><img src="/images/IMG_plate.jpeg" alt="plates-cutlery"></div></div>
+            <div class="image-container5">
+                <div class="image5"><img src="/images/Corner.jpeg" alt="corner-of-restaurant"></div></div>
+            <div class="image-container6">
+                <div class="image6"><img src="/images/IMG_from-above.jpeg" alt="restaurant-from-above"></div></div>
+            <div class="image-container7">
+                <div class="image7"><img src="/images/whole-restaurant.jpeg" alt="the-whole-restaurant"></div></div>
+            <div class="image-container8">
+                <div class="image8"><img src="/images/photo-of-logo.jpeg" alt="restaurant-logo-photo"></div></div>
         </div>
     </div>
+
+
 
     <footer>
         <div class="footer-content">
