--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
 </head>
 
 <body>
@@ -19,16 +18,14 @@
         <nav class="navbar">
             <div class="navdiv animate__animated animate__zoomIn repeat 4s">
                 <div class="logo border"><a href="#"> </a></div>
-              <nav>
-                 <ul>
-                      <li><a href="#">Home</a></li>
+                  <ul>
+                      <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
                       <li><a href="#">Gallery</a></li>
                       <li><a href="#">About Us</a></li>
                       <li><a href="#">Contact Us</a></li>
-                 </ul>
+                   </ul>
+                </div>
               </nav>
-            </div>
-        </nav>
     </header>
     <main>
 
