--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/contact-us.css">
     <script src="https://kit.fontawesome.com/edb0868ad4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,13 +14,13 @@
     <header>
         <nav class="navbar">
             <div class="navdiv animate__animated animate__zoomIn repeat 4s">
-                <div class="logo border"><a href="#"> </a></div>
+                <div class="logo border"><a href="/index.html"> </a></div>
               <nav>
                  <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">Gallery</a></li>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="#">Contact Us</a></li>
+                      <li><a href="/index.html">Home</a></li>
+                      <li><a href="/pages/gallery.html">Gallery</a></li>
+                      <li><a href="/pages/about-us.html">About Us</a></li>
+                      <li><a href="/pages/contact-us.html">Contact Us</a></li>
                  </ul>
               </nav>
             </div>
