--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header>
         <nav class="navbar">
             <div class="navdiv animate__animated animate__zoomIn repeat 4s">
-                <div class="logo border"><a href="#"> </a></div>
+                <div class="logo border"><a href="/index.html"> </a></div>
                   <ul>
-                      <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
-                      <li><a href="http://127.0.0.1:5500/pages/gallery.html">Gallery</a></li>
-                      <li><a href="http://127.0.0.1:5500/pages/about-us.html">About Us</a></li>
-                      <li><a href="http://127.0.0.1:5500/pages/contact-us.html">Contact Us</a></li>
+                      <li><a href="/index.html">Home</a></li>
+                      <li><a href="../pages/gallery.html">Gallery</a></li>
+                      <li><a href="../pages/about-us.html">About Us</a></li>
+                      <li><a href="../pages/contact-us.html">Contact Us</a></li>
                    </ul>
                 </div>
               </nav>
