--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="navdiv animate__animated animate__zoomIn repeat 4s">
                 <div class="logo border"><a href="#"> </a></div>
                   <ul>
-                      <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
-                      <li><a href="http://127.0.0.1:5500/pages/gallery.html">Gallery</a></li>
-                      <li><a href="http://127.0.0.1:5500/pages/about-us.html">About Us</a></li>
-                      <li><a href="http://127.0.0.1:5500/pages/contact-us.html">Contact Us</a></li>
+                      <li><a href="/index.html">Home</a></li>
+                      <li><a href="../pages/gallery.html">Gallery</a></li>
+                      <li><a href="../pages/about-us.html">About Us</a></li>
+                      <li><a href="../pages/contact-us.html">Contact Us</a></li>
                    </ul>
                 </div>
               </nav>
@@ -37,8 +37,8 @@
                 </video>
               <div class="content">
                     <h1>Indian & Swedish food at its best!</h1>
-                    <a href="http://127.0.0.1:5500/pages/contact-us.html"><button>Book A Table</button></a>
-                    <a href="http://127.0.0.1:5500/pages/contact-us.html"><button>Order Online</button></a>
+                    <a href="../pages/contact-us.html"><button>Book A Table</button></a>
+                    <a href="../pages/contact-us.html"><button>Order Online</button></a>
               </div>
             </div>
         </section>
@@ -65,13 +65,13 @@
                 <div class="alignment">
                     <h2>We serve today's lunch Monday - Friday between 11:00 - 15:00</h2></div> 
                 <div class="alignment">
-                    <a href="http://127.0.0.1:5500/pages/about-us.html"><button>READ MORE</button></a></div>
+                    <a href="../pages/about-us.html"><button>READ MORE</button></a></div>
                 <div class="alignment">
                      <h2>Order online</h2></div>
                 <div class="alignment">
                      <h3>Order your food for takeout in our modern ordering system!</h3></div>
                 <div class="alignment">
-                    <a href="http://127.0.0.1:5500/pages/contact-us.html"><button>ORDER ONLINE</button></a></div>     
+                    <a href="../pages/contact-us.html"><button>ORDER ONLINE</button></a></div>     
                 </div>
         </section>
       </main>
