--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="navdiv animate__animated animate__zoomIn repeat 4s">
-                <div class="logo border"><a href="#"> </a></div>
+                <div class="logo border"><a href="/index.html"> </a></div>
                   <ul>
                       <li><a href="/index.html">Home</a></li>
                       <li><a href="../pages/gallery.html">Gallery</a></li>
