changing footer text and adding z-index

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -69,7 +69,7 @@
         </div>
         <div class="end-of-page">
             <div class="footer-p-container">
-                <p class="footer-p">© 2020 Taj Mahal</p>
+                <p class="footer-p">© 2025 Tastebuds</p>
             </div>
         </div>
     </footer>
