--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="logo border"><a href="/index.html"> </a></div>
                   <ul>
                       <li><a href="/index.html">Home</a></li>
-                      <li><a href="../pages/gallery.html">Gallery</a></li>
-                      <li><a href="../pages/about-us.html">About Us</a></li>
-                      <li><a href="../pages/contact-us.html">Contact Us</a></li>
+                      <li><a href="/pages/gallery.html">Gallery</a></li>
+                      <li><a href="/pages/about-us.html">About Us</a></li>
+                      <li><a href="/pages/contact-us.html">Contact Us</a></li>
                    </ul>
                 </div>
               </nav>
