changes in footer

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="logo border"><a href="/index.html"> </a></div>
                   <ul>
                       <li><a href="/index.html">Home</a></li>
-                      <li><a href="../pages/gallery.html">Gallery</a></li>
-                      <li><a href="../pages/about-us.html">About Us</a></li>
-                      <li><a href="../pages/contact-us.html">Contact Us</a></li>
+                      <li><a href="/pages/gallery.html">Gallery</a></li>
+                      <li><a href="/pages/about-us.html">About Us</a></li>
+                      <li><a href="/pages/contact-us.html">Contact Us</a></li>
                    </ul>
                 </div>
               </nav>
@@ -95,7 +95,7 @@
         </div>
         <div class="end-of-page">
             <div class="footer-p-container">
-                <p class="footer-p">@Taste Buds 2025</p>
+                <p class="footer-p">@2025 TasteBuds</p>
             </div>
         </div>
   </footer>
