--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </video>
               <div class="content">
                     <h1>Indian & Swedish food at its best!</h1>
-                    <a href="../pages/contact-us.html"><button>Book A Table</button></a>
-                    <a href="../pages/contact-us.html"><button>Order Online</button></a>
+                    <a href="/pages/contact-us.html"><button>Book A Table</button></a>
+                    <a href="/pages/contact-us.html"><button>Order Online</button></a>
               </div>
             </div>
         </section>
@@ -65,13 +65,13 @@
                 <div class="alignment">
                     <h2>We serve today's lunch Monday - Friday between 11:00 - 15:00</h2></div> 
                 <div class="alignment">
-                    <a href="../pages/about-us.html"><button>READ MORE</button></a></div>
+                    <a href="/pages/about-us.html"><button>READ MORE</button></a></div>
                 <div class="alignment">
                      <h2>Order online</h2></div>
                 <div class="alignment">
                      <h3>Order your food for takeout in our modern ordering system!</h3></div>
                 <div class="alignment">
-                    <a href="../pages/contact-us.html"><button>ORDER ONLINE</button></a></div>     
+                    <a href="/pages/contact-us.html"><button>ORDER ONLINE</button></a></div>     
                 </div>
         </section>
       </main>
