--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -13,7 +13,7 @@
         <header>
             <nav class="navbar">
                 <div class="navdiv animate__animated animate__zoomIn repeat 4s">
-                <div class="logo border"><a href="#"> </a></div>
+                <div class="logo border"><a href="#"></a></div>
                 <nav>
                     <ul>
                       <li><a href="#">Home</a></li>
@@ -25,7 +25,7 @@
                 </div>
             </nav>
         </header>
-        <main> <!--2 huvudgrupper i main-->
+        <main> <!--2-huvudgrupper-i-main-->
             <div class="content">
                 <section class="content-container">
                     <div class="top-content-container">
@@ -48,33 +48,13 @@
                     </div>
                     <div class="bottom-container">
                         <h3 class="bottom-title-h3">Sonal & Malin & Emily</h3> 
-                        <h4 class="botom-fonders-info-h4">Grundare of Restaurant Taste Buds</h4>
+                        <h4 class="bottom-fonders-info-h4">Grundare of Restaurant Taste Buds</h4>
                     </div>
                 </section>
             </div>
-                 <!--del 2 Kontakt-->
-            <section class="contact">
-                <div class="contact-container">
-                    <h2 class="contact-title-h2">Kontakt</h2>
-                    <p class="contact-info-p"> 
-                        Contact
-                        Kryddgatan 24,
-                        251 23 Helsingborg
-                        info@restaurang-tastebuds.com
-                        042 -18 70 03
-                    </p>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <i class="fa-brands-fa-facebook"></i>
-                    <i class="fa-brands-fa-instagram"></i>
-                    <i class="fa-solid-fa-location-dot"></i><img class="location-map" src="/images/Skärmavbild 2025-09-05 kl. 10.24.55.png" alt="resturangens adress i google maps">
-                </div>
-            </section>
         </main>
-            <!--end section-->
-            <!--footer start-->
+            <!--contact-end-->
+            <!--footer-start-->
         <footer>
             <div class="footer-content">
                 <div class="footer-text">
@@ -93,7 +73,7 @@
             </div>
             <div class="end-of-page">
                 <div class="footer-p-container">
-                    <p class="footer-p">© 2020 Taj Mahal</p>
+                    <p class="footer-p">© 2025 Tastbuds</p>
                 </div>
             </div>
         </footer>
