--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -40,8 +40,8 @@
             Örbyvägen 10, 257 30 Rydebäck</p>
         <p class="mail-and-phone"> info@tastebuds.com <br>
             +46 (0)42-19 38 00</p>
-        <p><i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
+        <p><a class="a2-fa-brands" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a class="a2-fa-brands" href="#"><i class="fa-brands fa-square-instagram"></i></a>
         </p>
     </div>
     
@@ -68,8 +68,8 @@
                     Örbyvägen 10, 257 30 Rydebäck</p>
                 <p class="footer-mail-and-phone"> info@tastebuds.com <br>
                     +46 (0)42-19 38 00</p>
-                <p><i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
+                <p><a class="a-fa-brands" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a class="a-fa-brands" href="#"><i class="fa-brands fa-square-instagram"></i></a>
                 </p>
             </div>
             <div class="map-end-page">
