--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -60,26 +60,21 @@
             <div class="footer-content">
                 <div class="footer-text">
                     <h4 class="footer-contact">CONTACT</h4>
-                    <p class="address-footer"> Sundsgårdens Folkhögskola <br> <!--är det ok m br här?-->
-                        Örbyvägen 10, 257 30 Rydebäck
-                    </p>
+                    <p class="address-footer"> Sundsgårdens Folkhögskola <br> <!--är det ok m br här?-->                            Örbyvägen 10, 257 30 Rydebäck</p>
                     <p class="footer-mail-and-phone"> info@tastebuds.com <br>
-                        +46 (0)42-19 38 00
-                    </p>
+                       +46 (0)42-19 38 00</p>
                     <p>
                         <i class="fa-brands fa-square-facebook"></i>
                         <i class="fa-brands fa-square-instagram"></i>
                     </p>
                 </div>
-                    <div class="map-end-page">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2231.790237732663!2d12.75621057711289!3d55.98766337387669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465234a901be67fb%3A0x6f20292517f7837f!2sSundsg%C3%A5rdens%20Folkh%C3%B6gskola!5e0!3m2!1ssv!2sse!4v1758530362382!5m2!1ssv!2sse" width="600" height="222" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="map-end-page">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2231.790237732663!2d12.75621057711289!3d55.98766337387669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465234a901be67fb%3A0x6f20292517f7837f!2sSundsg%C3%A5rdens%20Folkh%C3%B6gskola!5e0!3m2!1ssv!2sse!4v1758530362382!5m2!1ssv!2sse" width="600" height="222" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             <div class="end-of-page">
                 <div class="footer-p-container">
-                    <p class="footer-p">
-                        © 2025 Tastebuds
-                    </p>
+                    <p class="footer-p">© 2025 Tastebuds</p>
                 </div>
             </div>
         </footer>
