changes in footer
changes in styling
add hover to links

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
                 </div>
         </section>
       </main>
-
-
-   <footer>
+  <footer>
         <div class="footer-content">
             <div class="footer-text">
                 <h4 class="footer-contact">CONTACT</h4>
@@ -95,9 +93,11 @@
         </div>
         <div class="end-of-page">
             <div class="footer-p-container">
-                <p class="footer-p">@2025 TasteBuds</p>
+                <p class="footer-p">© 2025 Tastebuds</p>
             </div>
         </div>
-  </footer>
+    </footer>
+
+   
 </body>
 </html>
