--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <div class="titlecontainer">
                 <div class="titlediv">
                     <h1>Restaurant Taste Buds</h1>
-                    <h4>First Indian restaurant in the heart of Malmo</h4>
+                    <h4>First Indian restaurant in the heart of Helsinborg</h4>
                     <p>Now also with an element of Indian & Swedish cuisine</p>
                         <a href="#"><button>See Our Menu</button></a>
                     <h4>Opening hours during Christmas & New Year</h4>
-                    <p>The Taj Mahal is closed on December 24 & 25 and January 1</p>
+                    <p>The Taste Buds is closed on December 24 & 25 and January 1</p>
                 </div>
             </div>
         </section>
