--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -33,21 +33,22 @@
                             About us
                         </h1>
                          <h3 class="top-content-info-h2">
-                            We are passionated about serving fresh and healthy food
+                            We are passionated about serving fresh and healthy food, whith the infusion of Indian and swedish foodculture. 
                         </h3>
                     </div> 
                     <div class="middle-container"> 
                         <h2 class="middle-title-h2">Our story</h2>
                         <p class="middle-info-p"> 
-                            Restaurant Taste Buds is a newly opened Indian restaurant in Helsingborg city center. 
-                            We are located in a very attractive location a stone's throw from the terrace steps at historic Kärnan. 
-                            We serve traditional Indian food with fresh spices from India. 
-                            Between 11:00 and 15:00 we serve lunch, which is already very popular. 
-                            We also serve alcohol in our restaurant. We are open from 11:00 to 22:00 every day.
+                            Restaurant Taste Buds is a newly opened Indian restaurant in Helsingborg city center. <br>
+                            We are located in a very attractive location a stone's throw from the terrace steps at historic Kärnan. <br>
+                            We serve traditional Indian food with fresh spices from India. <br>
+                            We are open from 11:00 to 22:00 every day. <br>
+                            Between 11:00 and 15:00 we serve lunch, which is already very popular. <br>
+                            We also serve alcohol in our restaurant. 
                         </p>
                     </div>
                     <div class="bottom-container">
-                        <h4 class="bottom-fonders-info-h4">Grundare of Restaurant Taste Buds</h4>
+                        <h2 class="bottom-fonders-info-h2">Founders of Restaurant Taste Buds</h2>
                         <h3 class="bottom-title-h3">Sonal & Malin & Emily</h3> 
                         
                     </div>
