--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -13,15 +13,13 @@
         <header>
             <nav class="navbar">
                 <div class="navdiv animate__animated animate__zoomIn repeat 4s">
-                <div class="logo border"><a href="#"></a></div>
-                <nav>
+                    <div class="logo border"><a href="/index.html"> </a></div>
                     <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">Gallery</a></li>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="#">Contact Us</a></li>
-                     </ul>
-                </nav>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/pages/gallery.html">Gallery</a></li>
+                        <li><a href="/pages/about-us.html">About Us</a></li>
+                        <li><a href="/pages/contact-us.html">Contact Us</a></li>
+                    </ul>
                 </div>
             </nav>
         </header>
