--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../styles/normalize.css">
         <link rel="stylesheet" href="../styles/about-us.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <script src="https://kit.fontawesome.com/88e0251fb1.js" crossorigin="anonymous"></script>
         <title>about us</title>
     </head>
