--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -60,12 +60,12 @@
             <div class="footer-content">
                 <div class="footer-text">
                     <h4 class="footer-contact">CONTACT</h4>
-                    <p class="address-footer"> Sundsgårdens Folkhögskola <br> <!--är det ok m br här?-->                            Örbyvägen 10, 257 30 Rydebäck</p>
+                    <p class="address-footer"> Sundsgårdens Folkhögskola <br> <!--är det ok m br här?-->
+                        Örbyvägen 10, 257 30 Rydebäck</p>
                     <p class="footer-mail-and-phone"> info@tastebuds.com <br>
-                       +46 (0)42-19 38 00</p>
-                    <p>
-                        <i class="fa-brands fa-square-facebook"></i>
-                        <i class="fa-brands fa-square-instagram"></i>
+                        +46 (0)42-19 38 00</p>
+                    <p><a class="a-fa-brands" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                        <a class="a-fa-brands" href="#"><i class="fa-brands fa-square-instagram"></i></a>
                     </p>
                 </div>
                 <div class="map-end-page">
